auth/deployments/blue-green/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service-auth
  namespace: auth
spec:
  selector:
    app: auth
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
