auth/deployments/blue-green/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service-auth
  namespace: auth
spec:
  selector:
    app: auth
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
