auth/deployments/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
spec:
  rules:
  - host: messenger.auth
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-service-auth
            port:
              number: 80
